# aiomad

./: Cargo.toml  README.md
res/: character1.glb  character1.mtl
src/: constants.rs  input.rs  main.rs  todo.txt
src/game/: character.rs  chunk_map.rs  game.rs  mod.rs  world_map.rs
src/graphics/: camera.rs  chunk_map.rs  chunk_map.wgsl  graphics.rs  light.rs  light.wgsl  mod.rs  model.rs  resources.rs  texture.rs  vertex.rs  world_map.rs  world_map.wgsl
src/legacy/: first.rs
